--- a/pom.xml
+++ b/pom.xml
@@ -7,25 +7,28 @@
 
     <groupId>com.grupo.proyecto</groupId>
     <artifactId>nombre-proyecto</artifactId>
-    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>nombre-proyecto</name>
     <url>http://maven.apache.org</url>
 
     <dependencies>
+        <!-- JUnit 4 para tests -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
 
+        <!-- OpenCSV para lectura de CSV -->
         <dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>5.9</version>
         </dependency>
 
+        <!-- JFreeChart para graficar -->
         <dependency>
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
@@ -35,7 +38,7 @@
 
     <build>
         <plugins>
-            <!-- Plugin para compilación de Java -->
+            <!-- Compilador Java -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -46,17 +49,15 @@
                 </configuration>
             </plugin>
 
-            <!-- Plugin para ejecutar clases con mvn exec:java -->
+            <!-- Ejecutar clases con mvn exec:java -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.1.0</version>
                 <configuration>
-                    <!-- Cambia esta clase por la que tenga tu método main -->
-                    <mainClass>com.miapp.GraficarTablas</mainClass>
+                    <mainClass>com.CoeficienteA</mainClass>
                 </configuration>
             </plugin>
         </plugins>
     </build>
-
 </project>
