--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,14 @@
     <artifactId>nombre-proyecto</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+
     <name>nombre-proyecto</name>
     <url>http://maven.apache.org</url>
 
+    <!-- DEPENDENCIAS -->
     <dependencies>
-        <!-- JUnit 4 para tests -->
+
+        <!-- JUnit 4 -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -21,23 +24,42 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- OpenCSV para lectura de CSV -->
+        <!-- JUnit 5 (Jupiter API + Engine) -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.10.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Permite ejecutar tests JUnit 4 dentro de JUnit 5 -->
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>5.10.1</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- OpenCSV -->
         <dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>5.9</version>
         </dependency>
 
-        <!-- JFreeChart para graficar -->
+        <!-- JFreeChart -->
         <dependency>
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
             <version>1.5.4</version>
         </dependency>
+
     </dependencies>
 
+    <!-- BUILD -->
     <build>
         <plugins>
+
             <!-- Compilador Java -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -49,7 +71,7 @@
                 </configuration>
             </plugin>
 
-            <!-- Ejecutar clases con mvn exec:java -->
+            <!-- Ejecutar con mvn exec:java -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
@@ -58,6 +80,15 @@
                     <mainClass>com.CoeficienteA</mainClass>
                 </configuration>
             </plugin>
+
+            <!-- NECESARIO para JUnit 4 + 5 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+            </plugin>
+
         </plugins>
     </build>
+
 </project>
